# jeigen

src/java/jeigen/: JeigenJna.java
src/native/: CMakeLists.txt  jeigen_JeigenJna.h  jeigen_JeigenJna_Jeigen.h  jeigen_impl.cpp
